# docs

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api/: index.html
building_your_model/containerizing/: index.html
building_your_model/custom_base_image/: index.html
building_your_model/gpu_models/: index.html
building_your_model/input_and_output/: index.html
building_your_model/model_definition/: index.html
building_your_model/predict_function/: index.html
building_your_model/setup_function/: index.html
building_your_model/using_custom_base_image/: index.html
cli_reference/: index.html
docs/: cli_reference.md  getting_started.md  index.md  rest_api_reference.md
docs/building_your_model/: containerizing.md  define_model_decorator.md  gpu_models.md  input_and_output.md  model_definition.md  predict_function.md  using_custom_base_image.md
docs/css/: scheme.css  termynal.css
docs/examples/: image_blurring.md  image_classification.md  stable_diffusion.md
docs/getting_started/: basic_example.md  installation.md  project_structure.md
docs/pushing_and_pulling_models/: pulling.md  pushing.md
docs/running_models/: demo.md  making_a_single_prediction.md  predicting.md  serving_rest_api.md  using_gpus.md
docs/usage/: use_gpus.md  (+3 more)
getting_started/: index.html
js/: termynal.js
model_server_api/: index.html
rest_api_reference/: index.html
runners/: index.html
search/: search_index.json
self-hosting/: index.html
tutorial_define_inputs_and_outputs/: index.html
tutorial_define_tungsten_model/: index.html
(+37 files in other folders)
