[tool.poetry]
name = "tunsten-docs"
version = "0.1.0"
description = "Tungsten Docs"
authors = ["Tungsten Contributors <contact@tungsten-ai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^9.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
